--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -44,14 +44,14 @@ $gray-light = #c9c9c9
 $off-white = #f4f4f4
 
 $gs = #e9e9e9
+$gs-darkest = darken($gs, 55)
 $gs-dark = darken($gs, 40)
 $gs-medium = darken($gs, 20)
 $gs-light = darken($gs, 10)
 
 $bg = $gs
 $fg = #3f3f3f
-$primary = teal
-$primary = orangered
+$secondary = orangered
 $primary = $off-black
 // $primary = firebrick
 
