--- a/src/html/partials/story/impact.hbs
+++ b/src/html/partials/story/impact.hbs
@@ -6,6 +6,7 @@
 
 <figure>
 	<div class='figure__chart'>
+		<img class='legend' src='assets/img/legend.png' alt='legend'>
 		<svg>
 			<g>
 				<g class='g-axis'><g class='axis'></g></g>
