--- a/src/css/story/impact.styl
+++ b/src/css/story/impact.styl
@@ -15,7 +15,7 @@
 			fill none
 			stroke $primary
 			stroke-width 1.5px
-		text
+		.name
 			fill $gs-darkest
 			set-type-size(x-small, false)
 			font-weight 600
@@ -25,7 +25,7 @@
 					fill $gs-medium
 
 		&.is-faded
-			text
+			.name
 				fill $gs-light
 
 		&.is-active
@@ -35,7 +35,7 @@
 			path.after--area
 				fill $gs-dark
 				
-			text
+			.name
 				fill $secondary
 			
 			&:nth-child(even)
@@ -49,6 +49,17 @@
 				stroke lighten($primary, 30)
 			// text
 			// 	opacity 0.35
+
+		.tip
+			set-type-size(xx-small, false)
+			font-family $mono
+			font-weight 400
+			&--bg
+				fill none
+				stroke-width 3px
+				stroke $bg
+			&--fg
+				stroke $secondary
 
 	.interaction
 		fill-opacity 0
@@ -65,3 +76,10 @@
 				stroke-dasharray 4px 4px
 			path
 				display none 
+
+	.legend
+		width (841 / 2)px
+		margin 0 auto
+		margin-bottom 2rem
+
+	
