--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -38,6 +38,15 @@
 	&__prelude
 		max-width $column-width * 1.67
 		margin 0 auto
+		font-weight 200
 		
+		span
+			&:nth-of-type(2)
+				color darken($secondary, 30)
+			&:nth-of-type(3)
+				color darken($secondary, 15)
+			&:nth-of-type(4)
+				color $secondary
+
 		p
 			set-type-size('xx-large')
