--- a/src/html/partials/base/font.hbs
+++ b/src/html/partials/base/font.hbs
@@ -10,55 +10,19 @@
         Copyright (C) 2017 Schwartzco Inc.
         License: 1704-GNCLGK     
 */
-	/* Canela */
+	/* Atlast Grotesk */
+	
+	
 	
 	@font-face {
-		font-family: 'Canela Web';
-		src: url('{{basepath}}assets/fonts/canela/Canela-Light-Web.woff2') format('woff2'),
-		url('{{basepath}}assets/fonts/canela/Canela-Light-Web.woff') format('woff');
-		font-weight: 300;
+		font-family: 'Atlas Grotesk Web';
+		src: url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Thin-Web.woff2') format('woff2'),
+		url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Thin-Web.woff') format('woff');
+		font-weight: 200;
 		font-style: normal;
 		font-stretch: normal;
 	}
 
-	@font-face {
-		font-family: 'Canela Web';
-		src: url('{{basepath}}assets/fonts/canela/Canela-Bold-Web.woff2') format('woff2'),
-		url('{{basepath}}assets/fonts/canela/Canela-Bold-Web.woff') format('woff');
-		font-weight: 700;
-		font-style: normal;
-		font-stretch: normal;
-	}
-	/* Publico Text */
-
-	@font-face {
-		font-family: 'Publico Text Web';
-		src: url('{{basepath}}assets/fonts/publico/PublicoText-Roman-Web.woff2') format('woff2'),
-		url('{{basepath}}assets/fonts/publico/PublicoText-Roman-Web.woff') format('woff');
-		font-weight: 400;
-		font-style: normal;
-		font-stretch: normal;
-	}
-
-	@font-face {
-		font-family: 'Publico Text Web';
-		src: url('{{basepath}}assets/fonts/publico/PublicoText-Bold-Web.woff2') format('woff2'),
-		url('{{basepath}}assets/fonts/publico/PublicoText-Bold-Web.woff') format('woff');
-		font-weight: 700;
-		font-style: normal;
-		font-stretch: normal;
-	}
-
-	@font-face {
-		font-family: 'Publico Text Web';
-		src: url('{{basepath}}assets/fonts/publico/PublicoText-Italic-Web.woff2') format('woff2'),
-		url('{{basepath}}assets/fonts/publico/PublicoText-Italic-Web.woff') format('woff');
-		font-weight: 400;
-		font-style: italic;
-		font-stretch: normal;
-	}
-	/* Atlast Grotesk */
-	/*
 	@font-face {
 		font-family: 'Atlas Grotesk Web';
 		src: url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Light-Web.woff2') format('woff2'),
@@ -67,7 +31,6 @@
 		font-style: normal;
 		font-stretch: normal;
 	}
-	*/
 
 	@font-face {
 		font-family: 'Atlas Grotesk Web';
