--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -13,7 +13,12 @@
 				<g class='g-voronoi'></g>
 			</svg>
 		</chart>
-		<figcaption class='x-small tk-atlas'><em>{{{copy.perspectiveNote}}}</em></figcaption>
+		<div class='figure__footer'>
+			<figcaption class='x-small tk-atlas'>
+				<em>{{{copy.perspectiveNote}}}</em>
+			</figcaption>
+			<p class='legend x-small'>{{{copy.perspectiveLegend}}}</p>
+		</div>
 	</figure>
 	<article class='scroll__text'>
 		{{#each copy.perspectiveSteps}}
