--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -52,8 +52,22 @@ $gs-light = darken($gs, 10)
 $bg = $gs
 $fg = #3f3f3f
 $secondary = orangered
+$secondary = darkorchid
 $primary = $off-black
-// $primary = firebrick
+
+// $yellow = #F0D978
+// $gs = lighten($yellow, 5)
+// $gs-darkest = darken($gs, 60)
+// $gs-dark = darken($gs, 50)
+// $gs-medium = darken($gs, 30)
+// $gs-light = darken($gs, 20)
+
+// $bg = $gs
+// $fg = #3f3f3f
+// $secondary = orangered
+// $secondary = darkorchid
+// $secondary = #463C76
+// $primary = $off-black
 
 
 $column-width = 35rem
