--- a/src/css/story/filter.styl
+++ b/src/css/story/filter.styl
@@ -9,8 +9,10 @@
 	background-color $off-white
 	box-shadow 0 2px 6px 2px rgba($fg, 0.25)
 	padding 0.75rem
-	transform translate3d(-62%, 100%, 0)
+	transform translate3d(-100%, 100%, 0)
 	transition transform 250ms ease-in-out
+	&.is-onscreen
+		transform translate3d(-62%, 100%, 0)
 	&.is-active
 		transform translate3d(0, 100%, 0)
 	&.is-visible
