--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -24,7 +24,7 @@ svg text
 	font-family $mono
 
 section
-	padding 3rem 1rem 0 1rem
+	padding 3rem 0.5rem 0 0.5rem
 
 .prose
 	margin 3rem auto
@@ -54,5 +54,7 @@ section
 	.person a, .name a
 		pointer-events none
 	
-.prose p strong
-	font-weight 500
+.prose
+	padding 0
+	p strong
+		font-weight 500
