almost mobile tooltip

--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -19,7 +19,8 @@ header
 			width 100%
 	
 header.is-sticky
-	position fixed
+	+mq('bp-4')
+		position fixed
 	transform translate3d(0,0,0)
 	background-color $bg
 	box-shadow 0 0 7px 1px darken($gray-light, 10)
