--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -49,4 +49,6 @@
 				color $secondary
 
 		p
-			set-type-size('xx-large')
+			set-type-size('large')
+			+mq('bp-4')
+				set-type-size('xx-large')
