--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -49,6 +49,14 @@
 				color $secondary
 
 		p
-			set-type-size('large')
+			set-type-size('large', true)
+			margin-bottom 2rem
 			+mq('bp-4')
+				line-height 1.5
 				set-type-size('xx-large')
+		
+	.prelude--1
+		display block
+		
+	.prelude--2
+		display none
