--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -17,7 +17,7 @@
 	<script src='critical.js'></script>
 	<!-- endsmoosh -->
 
-	{{!-- {{> base/analytics }} --}}
+	{{> base/analytics }}
 
 </head>
 
