--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -10,11 +10,11 @@
 		<p>{{{value}}}</p>
 		{{/each}}
 	</div>
-	<div class='intro__prelude prelude--2'>
+	{{!-- <div class='intro__prelude prelude--2'>
 		{{#each copy.prelude2}}
 		<p>{{{value}}}</p>
 		{{/each}}
-	</div>
+	</div> --}}
 	<h1 class='intro__hed tk-atlas'>{{copy.hed}}</h1>
 	<p class='intro__dek tk-atlas'>{{copy.dek}}</p>
 	
