--- a/src/html/partials/base/meta.hbs
+++ b/src/html/partials/base/meta.hbs
@@ -1,15 +1,15 @@
 {{! See variable definitions in template-data/meta.json }}
-<title>{{meta.title}}</title>
+<title>{{copy.hed}}</title>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-<meta name='description' content='{{meta.description}}' />
+<meta name='description' content='{{copy.dek}}' />
 <meta name='news_keywords' content='{{meta.keywords}}' />
 
-<meta property='og:title' content='{{meta.title}}' />
+<meta property='og:title' content='{{copy.hed}}' />
 <meta property='og:site_name' content='The Pudding' />
 <meta property='og:url' content='{{meta.url}}' />
-<meta property='og:description' content='{{meta.description}}' />
+<meta property='og:description' content='{{copy.dek}}' />
 <meta property='og:type' content='article' />
 <meta property='og:locale' content='en_US' />
 
@@ -21,8 +21,8 @@
 <meta name='twitter:card' content='summary_large_image' />
 <meta name='twitter:site' content='https://pudding.cool' />
 <meta name='twitter:creator' content='{{meta.author.twitterHandle}}' />
-<meta name='twitter:title' content='{{meta.title}}' />
-<meta name='twitter:description' content='{{meta.description}}' />
+<meta name='twitter:title' content='{{copy.hed}}' />
+<meta name='twitter:description' content='{{copy.dek}}' />
 <meta name='twitter:image:src' content='{{meta.imgTwitter}}' />
 
 <link rel='canonical' href='{{meta.url}}' />
