--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -43,14 +43,14 @@
 				set-type-size(x-small, false)
 
 			&.is-faded
-				a
+				a:link, a:visited, a:hover, a:active
 					color $gs-light
 
 			a
 				border none
 				color $gs-darkest
 				letter-spacing 0.04em
-				&:visited
+				&:link, &:visited, &:active
 					color $gs-darkest
 				&:hover
 					color $secondary
