--- a/src/html/partials/story/filter.hbs
+++ b/src/html/partials/story/filter.hbs
@@ -1,4 +1,4 @@
-<div class='filters tk-atlas'>
+<div class='filters is-unclicked'>
 	<p class='label x-small'><span class='label__value x-small'></span><span class='description'>Filter @@include('filter.svg')</span></p>
 	<div class='filter filter--cause'>
 		<p class='filter__label x-small'>Cause</p>
